kube/services/netpolicy/arborist_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-arborist
spec:
  podSelector:
    matchLabels:
      app: arborist
  ingress: 
    from:
      - podSelector: {}
        ports:
          - port: 80
          - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: arborist
      - podSelector:
          matchLabels:
            app: fence
      - ipBlock:
           # fence-create sidecar
           cidr: GEN3_FENCE_DBIP/32
      - ipBlock:
          # fence-create wants to talk to google now     
          cidr: 0.0.0.0/0
  policyTypes:
   - Ingress
   - Egress
